# learn_opengl

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
Headers/: EBO.h  VAO.h  VBO.h  shaderClass.h
Resources/shaders/: default.frag  default.vert
src/: EBO.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp
